<resources>
    <string name="app_name">TravelSafe</string>
    <string name="country_code_cn">+86</string>
    <string name="login_notify">跟团游用户请直接输入旅行社提供的账号密码登录</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_phone_number_hint">Phone number</string>
    <string name="login_title">Login</string>
    <string name="login_register">Register</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="input_verification_code_hint">Input verification code</string>
    <string name="next_step">Next</string>
    <string name="nickname_hint">Input nickname</string>
    <string name="previous_step">Previous</string>
    <string name="save_and_login">Save and login</string>
    <string name="input_password_again">Input password again</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="start_ignore">Ignore</string>
    <string name="start_login">Login</string>
    <string name="start_registry">Registry</string>

    <string name="login_toast">跟团游用户请直接输入旅行社提供的账号密码登录</string>
    <string name="login_mobile_hint">+86 Mobile number </string>
    <string name="login_password_hint">Password</string>
    <string name="hint_password_confirm">Password confirm</string>
    <string name="login_forget_password">Forget Password?</string>
    <string name="login_btn_txt">Login</string>
    <string name="auth_code_hint">input auth code</string>
    <string name="btn_finish_registry">Finish</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_save_and_login">Login</string>
    <string name="check_box_show_password">Show password</string>
    <string name="hint_nickname">input nickname</string>
    <string name="next_btn">Next</string>
    <string name="toast_retrieve_password">This mobile is never registry, press Next to registry</string>
    <string name="hint_input_auth_code">iInput verification code</string>
    <string name="request_auth_code">Send auth code</string>

    <!--asr start-->
    <string name="reco_type_label">Recognition Type / Language Model</string>
    <string name="dictation">Dictation</string>
    <string name="search">Search</string>
    <string name="tv">Television</string>

    <string name="nlu_context_tag_label">NLU Context Tag</string>
    <string name="detection_type_label">Detection Type</string>
    <string name="long_endpointer">Long</string>
    <string name="short_endpointer">Short</string>
    <string name="none">None</string>

    <string name="language_label">Language Code</string>
    <string name="default_language">eng-USA</string>

    <string name="logs_label">logs</string>
    <string name="clear_logs_label">clear</string>

    <string name="recognize">recognize()</string>
    <string name="recognize_with_service">recognizeWithService()</string>
    <string name="playing">Playing..</string>
    <string name="listening">Listening..</string>
    <string name="processing">Processing..</string>
    <string name="app_version">SpeechKit SampleApp v2.1.3</string>
    <!--asr end-->

</resources>
