<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/phone_number_slot"/>

    <com.marlonmafra.android.widget.EditTextPassword
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_edt"
        android:layout_marginTop="32dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/system_padding"
        android:layout_marginRight="@dimen/system_padding"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:iconPosition="right"
        app:hidePasswordIcon="@drawable/ic_hide_password"
        app:showPasswordIcon="@drawable/ic_show_password"
        app:fontPath="fonts/roboto_regular.ttf"
        android:layout_below="@+id/phone_number_slot"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_txt"
        android:id="@+id/login_btn"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_password_edt"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_forget_password_txt"
        android:text="@string/forget_password"
        android:clickable="true"
        android:textSize="15sp"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_notify"
        android:id="@+id/login_notify"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_below="@+id/login_forget_password_txt"
        android:layout_marginTop="38dp"
        android:layout_alignStart="@+id/login_password_edt"
        android:layout_alignEnd="@+id/login_password_edt" />

</RelativeLayout>
