<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_fragment_layout"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_head_layout"
            android:background="@drawable/login_head_bg">
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_middle_height"
            android:background="@color/login_middle_bg_color">
                <EditText
                    android:layout_width="@dimen/login_input_width"
                    android:layout_height="@dimen/login_input_height"
                    android:id="@+id/login_mobile_edt"
                    android:background="@drawable/login_input_bg"
                    android:textSize="@dimen/login_input_hint_txt_size"
                    android:textColorHint="@color/login_hint_txt_color"
                    android:hint="@string/login_mobile_hint"
                    android:inputType="phone"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/login_mobile_margin_top" />
                <EditText
                    android:layout_width="@dimen/login_input_width"
                    android:layout_height="@dimen/login_input_height"
                    android:id="@+id/login_nickname_edt"
                    android:background="@drawable/login_input_bg"
                    android:textSize="@dimen/login_input_hint_txt_size"
                    android:textColorHint="@color/login_hint_txt_color"
                    android:hint="@string/hint_nickname"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/login_mobile_margin_top" />
                <EditText
                    android:id="@+id/login_password_edt"
                    android:layout_below="@id/login_mobile_edt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/login_password_margin_top"
                    android:layout_width="@dimen/login_input_width"
                    android:layout_height="@dimen/login_input_height"
                    android:textSize="@dimen/login_input_hint_txt_size"
                    android:textColorHint="@color/login_hint_txt_color"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />
            <EditText
                android:id="@+id/login_password_confirm_edt"
                android:layout_below="@id/login_mobile_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/login_password_margin_top"
                android:layout_width="@dimen/login_input_width"
                android:layout_height="@dimen/login_input_height"
                android:textSize="@dimen/login_input_hint_txt_size"
                android:textColorHint="@color/login_hint_txt_color"
                android:background="@drawable/login_input_bg"
                android:hint="@string/hint_password_confirm"
                android:inputType="textPassword"
                android:visibility="gone"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
            <include layout="@layout/auth_code_layout"
                android:layout_below="@id/login_mobile_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/login_password_margin_top"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/login_input_width"/>
            <TextView
                android:id="@+id/login_forget_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_edt"
                android:layout_marginTop="@dimen/login_forget_margin_top"
                android:layout_marginLeft="@dimen/login_forget_margin_left"
                android:text="@string/login_forget_password"
                android:textColor="@color/login_forget_txt_color"
                android:textSize="@dimen/login_forget_txt_size"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_edt"
                android:layout_marginTop="@dimen/login_forget_margin_top"
                android:layout_marginLeft="@dimen/login_forget_margin_left"
                android:id="@+id/chk_show_password"
                android:button="@drawable/check_box_selector"
                android:textColor="@color/black"
                android:text="@string/check_box_show_password"
                android:textSize="@dimen/login_forget_txt_size"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_bottom_height"
            android:background="@color/white">
            <RelativeLayout
                android:id="@+id/login_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn"
                android:layout_marginTop="@dimen/login_btn_margin_top"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/login_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/login_btn_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_btn_txt_size"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/previous_and_login_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/previous_btn"
                    android:text="@string/btn_previous"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_btn_txt_size"
                    android:background="@drawable/btn_previous_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/save_and_login_btn"
                    android:text="@string/btn_save_and_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_btn_txt_size"
                    android:background="@drawable/btn_save_and_login_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/login_title_txt_color"
        android:textSize="@dimen/login_title_txt_size"
        android:layout_marginLeft="@dimen/login_title_margin_left"
        android:layout_marginTop="@dimen/login_title_margin_top"/>
</RelativeLayout>