<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/start_bg">
    <RelativeLayout
        android:id="@+id/ignore_rl"
        android:background="@drawable/start_ignore_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/start_ignore_margin_top"
        android:layout_marginRight="@dimen/start_ignore_margin_right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_ignore"
            android:textSize="@dimen/start_ignore_text_size"
            android:textColor="@color/start_ignore_text_color"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/start_login_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/start_login_margin_top"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start_login_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_login"
            android:textSize="@dimen/start_login_register_text_size"
            android:textColor="@color/start_login_text_color"
            android:gravity="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/start_registry_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_login_rl"
        android:layout_marginTop="@dimen/start_registry_margin_top"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start_registry_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_registry"
            android:textSize="@dimen/start_login_register_text_size"
            android:textColor="@color/start_registry_text_color"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>